--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+@layer base{
+  @font-face {
+    font-family: 'Poppins Regular';
+    src: url('../../public/fonts/Poppins/Poppins-Regular.ttf'),format(truetype);
+    display: swap;
+  }
+  @font-face {
+    font-family: 'Poppins Medium';
+    src: url('../../public/fonts/Poppins/Poppins-Medium.ttf'),format(truetype);
+    display: swap;
+  }
+  @font-face {
+    font-family: 'Poppins SemiBold';
+    src: url('../../public/fonts/Poppins/Poppins-SemiBold.ttf'),format(truetype);
+    display: swap;
+  }
+}
+
 input[type='number'] {
   -moz-appearance: textfield;
   appearance: textfield;
